WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
314635
GdbJIT does not support RISCV64 ELF records
https://bugs.webkit.org/show_bug.cgi?id=314635
Summary
GdbJIT does not support RISCV64 ELF records
h.dwwwwww
Reported
2026-05-12 05:07:13 PDT
The GdbJIT ELF writer in Source/JavaScriptCore/jit/GdbJIT.cpp only handles ARM_THUMB2, X86_64, and ARM64 in the relevant ELF layout paths. For CPU(RISCV64), the code does not select the 64-bit ELF ident/layout and does not set the ELF machine type. As a result, RISCV64 falls through to the unsupported target architecture path in GdbJIT.cpp.
Attachments
Add attachment
proposed patch, testcase, etc.
EWS
Comment 1
2026-05-12 23:06:26 PDT
Committed
313134@main
(2130a345347b): <
https://commits.webkit.org/313134@main
> Reviewed commits have been landed. Closing PR #64755 and removing active labels.
Radar WebKit Bug Importer
Comment 2
2026-05-12 23:07:12 PDT
<
rdar://problem/176950660
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug