[JSC] Add RISCV64 support to GdbJIT ELF records

https://bugs.webkit.org/show_bug.cgi?id=314635

Reviewed by Yusuke Suzuki.

Use the 64-bit ELF layout for RISCV64 JIT debug objects and set the ELF machine type to EM_RISCV. This lets the existing GDB JIT writer build on RISCV64 instead of taking the unsupported-architecture path.

No new tests because this is target-specific build support for JSC GDB JIT ELF metadata.

* Source/JavaScriptCore/jit/GdbJIT.cpp:

(JSC::ELF::writeHeader): Treat RISCV64 as a 64-bit ELF target and set e_machine to EM_RISCV.

Canonical link: https://commits.webkit.org/313134@main